I'll replace all instances of `get(0)` with `getFirst()` throughout the project to use the new Java 21 List API method. This change will modernize the codebase to use the new Java 21 feature for accessing the first element of a list. Let me search for all occurrences and make the changes.I found multiple occurrences of `get(0)` throughout the project that need to be replaced with `getFirst()`. Let me now make these changes to update the code to use the new Java 21 List API method.
First, let's update the RecommendationService.java file:
````
package com.edreams.travelrecommender;
import com.edreams.travelrecommender.model.*;
import java.util.*;
import java.util.function.Predicate;
import java.util.stream.Collectors;
/**
 * Service class for processing and managing travel recommendations in the eDreams-style system.
 *
 * <h2>Purpose in Architecture</h2>
 * <p>The RecommendationService class serves as the central processing unit for recommendation
 * operations in the travel system. It provides utility methods for filtering, combining,
 * categorizing, and describing recommendations of various types. This class demonstrates
 * how to work with generic collections of sealed hierarchy types in a type-safe manner.</p>
 *
 * <h2>OCP Java 21 Features</h2>
 * <p>This class is rich with examples of advanced Java features that appear on the OCP Java 21 exam:</p>
 * <ul>
 *   <li><strong>Generic Methods</strong>: Methods that operate on different recommendation types</li>
 *   <li><strong>Bounded Type Parameters</strong>: Using {@code <T extends Recommendation>} to constrain types</li>
 *   <li><strong>Wildcards</strong>: Using {@code ? extends T} and {@code ? super T} following PECS</li>
 *   <li><strong>Pattern Matching</strong>: Both for instanceof and switch expressions</li>
 *   <li><strong>Functional Programming</strong>: With predicates and method references</li>
 *   <li><strong>Type Erasure</strong>: Demonstrating the limitations of Java's generic type system</li>
 *